@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-   Copyright 2001-2005 The Apache Software Foundation
+   Copyright 2001-2006 The Apache Software Foundation
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -166,6 +166,9 @@
   </developers>
 
   <contributors>
+    <contributor>
+      <name>Rahul Akolkar</name>
+    </contributor>
     <contributor>
       <name>Jason Anderson</name>
     </contributor>
